SS-ALB.tf
resource "aws_lb" "SS-demo-ecs" {
  name               = "SS-asg-example"
  load_balancer_type = "application"
  subnets            = ["${data.aws_subnet_ids.default.ids}"]
  security_groups    = ["${aws_security_group.alb.id}"]
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = "${aws_lb.SS-demo-ecs.arn}"
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404: page not found"
      status_code  = 404
    }
  }
}

resource "aws_security_group" "alb" {
  name = "SS-demo-ecs"

  # Allow inbound HTTP requests
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound requests
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
